{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 511,
  "lineage": "0d05be25-bb16-ca3d-eda2-884ead83c808",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-097314574f47ca618",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-097314574f47ca618",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef90f35e02963e6b",
            "private_dns": "ip-10-0-1-34.eu-central-1.compute.internal",
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-3-121-114-72.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.114.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b4420a07f45a4d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0239234a7377020b4",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1ab41be3f5117db"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-05a3756410750c590",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a3756410750c590",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c37a89f13a2ba847",
            "private_dns": "ip-10-0-2-19.eu-central-1.compute.internal",
            "private_ip": "10.0.2.19",
            "public_dns": "ec2-3-68-77-87.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.77.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01efa3e9b58e200ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f88648a101b6f0f2",
            "tags": {
              "Name": "Webserver-2"
            },
            "tags_all": {
              "Name": "Webserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1ab41be3f5117db"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-05717b4a240906345",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05717b4a240906345",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c1a78095164df48",
            "private_dns": "ip-10-0-3-29.eu-central-1.compute.internal",
            "private_ip": "10.0.3.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020258d4c87fa6055",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0baa72ceb8e90335a",
            "tags": {
              "Name": "Webserver-1"
            },
            "tags_all": {
              "Name": "Webserver-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0015e97a297045076"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.bastion",
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04c921614424b07cd",
            "arn": "arn:aws:ec2:eu-central-1:312895886245:instance/i-026963e2957abd23f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026963e2957abd23f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b89930aa6e71d560",
            "private_dns": "ip-10-0-4-133.eu-central-1.compute.internal",
            "private_ip": "10.0.4.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020d2c70fa55cc325",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a3e94590375ee54",
            "tags": {
              "Name": "Webserver-2"
            },
            "tags_all": {
              "Name": "Webserver-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0015e97a297045076"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.bastion",
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:internet-gateway/igw-0d3b07efbe9de0850",
            "id": "igw-0d3b07efbe9de0850",
            "owner_id": "312895886245",
            "tags": {
              "Name": "Test"
            },
            "tags_all": {
              "Name": "Test"
            },
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "test-alb-log-terziev",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:loadbalancer/app/test/880982080e672b7a",
            "arn_suffix": "app/test/880982080e672b7a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-1638753425.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:loadbalancer/app/test/880982080e672b7a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test",
            "security_groups": [
              "sg-01458e7da6d92e045"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0239234a7377020b4"
              },
              {
                "subnet_id": "subnet-0f88648a101b6f0f2"
              }
            ],
            "subnets": [
              "subnet-0239234a7377020b4",
              "subnet-0f88648a101b6f0f2"
            ],
            "tags": {
              "Name": "ALB"
            },
            "tags_all": {
              "Name": "ALB"
            },
            "vpc_id": "vpc-07e399adcf092181a",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_s3_bucket.test-alb-log-terziev",
            "aws_s3_bucket_object.alb-logs",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:listener/app/test/880982080e672b7a/3cc94cb29b18dfb2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/bcb723e79fc08596",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:listener/app/test/880982080e672b7a/3cc94cb29b18dfb2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:loadbalancer/app/test/880982080e672b7a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.alb_target_group",
            "aws_s3_bucket.test-alb-log-terziev",
            "aws_s3_bucket_object.alb-logs",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/bcb723e79fc08596",
            "arn_suffix": "targetgroup/alb-target-group/bcb723e79fc08596",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/bcb723e79fc08596",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/bcb723e79fc08596-20220210120224806100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/bcb723e79fc08596",
            "target_id": "i-097314574f47ca618"
          },
          "dependencies": [
            "aws_instance.ec2_instances",
            "aws_key_pair.ssh-key",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/bcb723e79fc08596-20220210120224780500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:312895886245:targetgroup/alb-target-group/bcb723e79fc08596",
            "target_id": "i-05a3756410750c590"
          },
          "dependencies": [
            "aws_instance.ec2_instances",
            "aws_key_pair.ssh-key",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.bastion",
            "aws_security_group.load_balancer_sg",
            "aws_security_group.webserver_security_group",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:route-table/rtb-093c9439062480d93",
            "id": "rtb-093c9439062480d93",
            "owner_id": "312895886245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:route-table/rtb-086574f49a98fcd0c",
            "id": "rtb-086574f49a98fcd0c",
            "owner_id": "312895886245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:route-table/rtb-0757039c059ff924f",
            "id": "rtb-0757039c059ff924f",
            "owner_id": "312895886245",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3b07efbe9de0850",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046df7d44d38b5d66",
            "route_table_id": "rtb-093c9439062480d93",
            "subnet_id": "subnet-0baa72ceb8e90335a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c0adef18d0a1aa9",
            "route_table_id": "rtb-086574f49a98fcd0c",
            "subnet_id": "subnet-09a3e94590375ee54"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f2b630fa6038917",
            "route_table_id": "rtb-0757039c059ff924f",
            "subnet_id": "subnet-0239234a7377020b4"
          },
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc4dfb49846d7a9b",
            "route_table_id": "rtb-0757039c059ff924f",
            "subnet_id": "subnet-0f88648a101b6f0f2"
          },
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:security-group/sg-0015e97a297045076",
            "description": "Allow SSH on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0015e97a297045076",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.85.251.253/32"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion - SSH SG",
            "name_prefix": "",
            "owner_id": "312895886245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:security-group/sg-01458e7da6d92e045",
            "description": "Allow Web Traffic on Ports 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01458e7da6d92e045",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Unsecure Web Access (HTTP)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Application Load Balancer Security Group",
            "name_prefix": "",
            "owner_id": "312895886245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load-Balancer-SG"
            },
            "tags_all": {
              "Name": "Load-Balancer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:security-group/sg-0b1ab41be3f5117db",
            "description": "Allow Web Traffic via LoadBalancer and SSH via Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1ab41be3f5117db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0015e97a297045076"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Unsecure Web Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01458e7da6d92e045"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "312895886245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer-SG"
            },
            "tags_all": {
              "Name": "WebServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.load_balancer_sg",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-0baa72ceb8e90335a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baa72ceb8e90335a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-09a3e94590375ee54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a3e94590375ee54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-0239234a7377020b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0239234a7377020b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-1"
            },
            "tags_all": {
              "Name": "Public-1"
            },
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:subnet/subnet-0f88648a101b6f0f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f88648a101b6f0f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "312895886245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-2"
            },
            "tags_all": {
              "Name": "Public-2"
            },
            "vpc_id": "vpc-07e399adcf092181a"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:312895886245:vpc/vpc-07e399adcf092181a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090015459e6400adb",
            "default_route_table_id": "rtb-0cd7b101ec23715a6",
            "default_security_group_id": "sg-0f40bfed62b21ce63",
            "dhcp_options_id": "dopt-0984ed7574623ca8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07e399adcf092181a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd7b101ec23715a6",
            "owner_id": "312895886245",
            "tags": {
              "Name": "Test"
            },
            "tags_all": {
              "Name": "Test"
            }
          }
        }
      ]
    }
  ]
}